# routes/authors.js
@@ -1,12 +1,13 @@
 const express = require('express');
 const router = express.Router();
+const auth = require('../middleware/auth');
 
 const authorsController = require('../controllers/authorsController');
-const booksController = require('../controllers/booksController');
-router.get('/', authorsController.getAllAuthors);
-router.get('/:id', authorsController.getAuthorById);
-router.post('/', authorsController.createAuthor);
-router.put('/:id', authorsController.updateAuthor);
-router.delete('/:id', authorsController.deleteAuthor);
+
+router.get('/', auth, authorsController.getAllAuthors);
+router.get('/:id', auth,  authorsController.getAuthorById);
+router.post('/', auth, authorsController.createAuthor);
+router.put('/:id', auth,  authorsController.updateAuthor);
+router.delete('/:id', auth,  authorsController.deleteAuthor);
 
 module.exports = router;
