# swagger/swagger.json
@@ -15,18 +15,113 @@
             "description": "Render production server"
         }
     ],
+    "components":{
+        "securitySchemes": {
+          "bearerAuth": {
+            "type": "http",
+            "scheme": "bearer",
+            "bearerFormat": "JWT"
+        }
+      }
+    },
+
+
     "tags": [
         {
-            "name": "Authors",
-            "description": "Authors  management operations"},
+            "name": "Auth", "description": "Authentication  management operations"},
+            {"name": "Authors", "description": "Author management"},
             {"name": "Books", "description": "Books management operations"}
         ],
     
     "paths": {
-        "/authors": {
+        "/auth/register": {
+            "post": {
+             "tags": ["Auth"],
+             "summary": " Register a new user",
+             "requestBody": {
+            "required": true,
+            "content": {
+            "application/json": {
+            "schema": {
+            "type": "object",
+            "required": ["username", "email", "password"],
+            "properties": {
+            "username": {
+            "type": "string",
+            "description": "Unique username"
+            },
+            "email": {
+                "type": "string",
+                "format": "email",
+                "description": "User email address"
+            },
+            "password": {
+                "type": "string",
+                "minLength": 6,
+                "description": "User password (minimum 6 characters)"
+            }
+           }
+          },
+
+            "example": {
+                "username": "emmanuelowilli",
+                "email": "emmanuelowilli2025@gmail.com",
+                "password": "moroni10"
+            }
+           }
+         }
+       },
+       "responses": {
+        "201": { "description": "User registered successfully"},
+        "400": { "description": "Validation error or user already exists"},
+        "500": { " description": "Server error"}
+       }
+    }
+},
+"/auth/login": {
+    "post": {
+        "tags": ["Auth"],
+        "summary": "Login user and receive JWT",
+        "requestBody": {
+            "required": true,
+            "content": {
+                "application/json": {
+                    "schema": {
+                        "type": "object",
+                        "required": ["email", "password"],
+                        "properties": {
+                            "email": {
+                                "type": "string",
+                                "format": "email",
+                                "description": "User email address"
+                            },
+                            "password": {
+                              "type": "string",
+                              "description": "User password"
+                            }
+                        }
+                    },
+                    "example": {
+                      "email": "emmanuelowilli2025@gmail.com",
+                      "password": "moroni10"
+                    }
+                }
+            }
+        },
+        "responses": {
+            "200": { "description": "JWT token returned" },
+            "400": { "description": "Invalid credentials"},
+            "500": { "description": "Server error"}
+        }
+    }
+},
+        "/api/authors": {
             "get": {
                 "summary": "Get all authors",
                 "tags": ["Authors"],
+                 "security": [
+                    {"bearerAuth": [] }
+                ],
                 "responses": {
                     "200": {
                         "description": "A list of authors"},
@@ -38,6 +133,9 @@
             "post": {
                 "summary": "Create a new author",
                 "tags": ["Authors"],
+                "security": [
+                    {"bearerAuth": [] }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -70,10 +168,13 @@
             }
         },
 
-        "/authors/{authorId}": {
+        "/api/authors/{authorId}": {
             "get": {
                 "summary": "Get author by ID",
                 "tags": ["Authors"],
+                 "security": [
+                    {"bearerAuth": [] }
+                ],
                 "parameters": [
                     {
                         "name": "authorId",
@@ -139,6 +240,9 @@
             "delete": {
                 "summary": "Delete author by ID",
                 "tags": ["Authors"],
+                 "security": [
+                    {"bearerAuth": [] }
+                ],
                 "parameters": [
                     {
                         "name": "authorId",
@@ -163,6 +267,9 @@
             "get": {
                 "summary": "Get all books",
                 "tags": ["Books"],
+                 "security": [
+                    {"bearerAuth": [] }
+                ],
                 "responses": {
                     "200": {
                         "description": "A list of books"},
@@ -173,6 +280,9 @@
             "post": {
                 "summary": "Create a new book",
                 "tags": ["Books"],
+                 "security": [
+                    {"bearerAuth": [] }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -300,6 +410,9 @@
             "delete": {
                 "summary": "Delete book by ID",
                 "tags": ["Books"],
+                "security": [
+                    { "bearerAuth": [] }
+                ],
                 "parameters": [
                     {
                         "name": "id",
